--- a/gallery.html
+++ b/gallery.html
@@ -39,20 +39,34 @@
 				<h3 class="section-title subtitle">Ebhabei golpo hok, aamader rupkothaay.</h3>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/dist/pa-embed-player.min.js" async></script>
-<div class="pa-embed-player" style="width:100%; height:480px; display:none;"
-  data-link="https://photos.app.goo.gl/CDgmsKwfjWE381LE6"
-  data-title="Roadside Baramdah"
-  data-description="9 new photos added to shared album">
-  <img data-src="https://lh3.googleusercontent.com/TkyKIaIbeeaNSevCI25F0i44jGzHIwFo9rvgauA8XHLizOp9W2OoFshQD2r8IfYLFHP61m65xgjDgsucQHjRuOwFtKLJ9QSnk0X3IN0NzM-lPKfBo7dq4Qypv1CWJMcYcf-HVdHoVIw=w1920-h1080" src="" alt="" />
-  <img data-src="https://lh3.googleusercontent.com/XRUZCy9A2TNbnpr-JiDnr37V_EfGFSjF0sgtV2eIWpPQYYj2ZNCIdv_DMQt-xQxrqEDozpdBwKBYxnzpLO80LNjxYUfx7CBa0SkPSapTE_vEmRrSEFL6F3oCGipOyTshnuj8osQP_FY=w1920-h1080" src="" alt="" />
-  <img data-src="https://lh3.googleusercontent.com/td28cCjoROFLQe40TAnEyjSfwAIN9-C7v2A8jcvY2G268KAK7uX2qX4K-F8xI1AXuwp2jYQwDR90-lkq6rt2eh4wSQMXdnabGZPMWE8gth3aU2QcBypFH-h8S-lPV7uvk2IHt7bP3oY=w1920-h1080" src="" alt="" />
-  <img data-src="https://lh3.googleusercontent.com/VaRowCqtZakl7xdutbsJmuPWEa9tjgdDksC7cQsCotf_-HzVyRI8gCURmLqDAl3lvgTr3KqQROKRCy8fSvCUlDocq1EZybXJCqZMFtb5iU4vOuGc8o1KLZJ0M-zQQxPpqvVB1leXe7Y=w1920-h1080" src="" alt="" />
-  <img data-src="https://lh3.googleusercontent.com/zp_bIjeyeuLKR0GMa_FHegZ-_8PcfduZOXL0woa3_e_Uy-pWNYcsRq5dFV2lwPlU_JW4USmZEky6RKCpsp7gyUowcVmmgN8DQ9tPx21bos_ShvRQEL_rY7qJrYDgCSvTLskMWPb8eqE=w1920-h1080" src="" alt="" />
-  <img data-src="https://lh3.googleusercontent.com/r1PzATZgVzRHaR_KaYznmggGCXsya326CzS9B9lVyr8SIKt3lVgPgAd_mZvWnBOCBoizOQpQ5PYevJHFLnEckXY8IpUONInBd5wlI6VH_EuROsOtOSibnW3dD7kX_R4hjDfNyI20KJk=w1920-h1080" src="" alt="" />
-  <img data-src="https://lh3.googleusercontent.com/kYiPql3kSR6ia9CKQo_L_Z0JS7utlpOqx6RL6a3lFOwgbwz6vVA62zyyFiKmra0TGKZpitGHuQh_NG1U4f3BqNHh8B-pw9v_ruL8TISRXFijuvX6TeUFYzP4JqfxhaMg0UYzEz4MwDU=w1920-h1080" src="" alt="" />
-  <img data-src="https://lh3.googleusercontent.com/QtAgASoQ3Lbastv1HMZ2kDs6GYGNOniRvsyPiqDfnYIeCAaBt3NFYcULOB1B8JEBQ0htCz7NCE19I5XdPxikcc9UrJGJ8TEbvt321XMwtHND30GBudEVAM3UzQ6SUo5li3qMBwJYN9o=w1920-h1080" src="" alt="" />
-  
-  <img data-src="https://lh3.googleusercontent.com/Tlbxnh4cmiAZ0S7_5lY_UbjJ1Gu06d56zZULsT5rFEB5OFmcO2Ua01aDIPdcXyZPNamwCsnf4bzcDT_v3p4usLF_g1bUicVenvjnRwaIkXIgR40bJP1N_atAQVTM7-j7mVFbNrR-zcE=w1920-h1080" src="" alt="" />
+<div class="pa-embed-player" style="width:100%; height:470px; display:none;"
+  data-link="https://photos.google.com/share/AF1QipOG7q29MGsj9LkEgAJ31DqiIePCM_9CDk5GI-4AtMJpAsZGhNgfReJuvbNBVTvI8A?key=MmVvMDkwWE9VdEp6LVFOcjctMVBfT2w5S2JnUDF3"
+  data-title="Moments"
+  data-description="24 new photos added to shared album">
+  <img data-src="https://lh3.googleusercontent.com/shWolxCCEZjNDY6b2jKWNzod9nJ0ct2moxwEnpxCb9fw8tU9UAH117444YosPPMxeuF89FpvkMoFzRmbNfaUJFuCB150695_-j1K70RJPXEZkBa3X-ZYHJcT2L1aMrpdMILSkDYfbQ=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/a1gS72fpngALF3aOkm4ErYG07C6KD9oi2A1w_NhDrLCj5Gm_uULsdI5zFpgXryTxHhw4HOfKHE6Cumtruli3VzE0f4DAJoZUUvcw58kw7kRKcltQyqSnIqloC6jEy9rpUuyD4NWg_A=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/m2htdHrWTq8yPYZBKrIAbwGoPTc3hYz1YgPEUv29JM0-qzds339wKzZGVwu4Mr_lGnfJ92fHcGvXg5JvdVIYUp4IrwizfE2k8V8YIektcEg7WlYUZfC2kat3Qxq1CYOAZPJa6oc-CQ=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/aSStJ6fV18KKEDJYBT0NtvAboEw8xJqmSz5W8J-H4s9voeDLLw41fXWWHnI2Vizw0S1ArLIaCJKQKqxp6gxrPC0WgbCWXxC6Ab39W-vOQANJcv-g3Tf8UxmI-aE1R0LcfPbBfwnM7w=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/xSSYsH5-aymtyb5TgdoSKhNS8Pt68a5vHTzKDAnlfV9swjNX9Mbxw9dAnYrwNA-ENu8ek0XDo17XlZ7re4btLDkWnnF8SSfP2CUmORsZ6fzHEbB9qa025iAN2oGhXl8YaRDCywh2og=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/b1iN4Rc2SWOYNHwkI7r8HhEiidRuUbN-6gmoyd8rP5LibA1-ghlHqCoBUf4H0bL2A041X54Zp-YuNnswwJvkScEdPHLjUJ9KTKTWRm9MVq0rqAZS6as7SlpoSr4ySsKrh0PiJTbZUw=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/g_pEBxBbLg7zVc6_OkHVh-XBVWl0eWnBvWv-S0DbzaGGCbSjjnWuQfvgslkFbHQzbvqh8EFHBjyDfZnWQj6ZeSdEiFAVmRGwR7W8pmKs79iGc_M2brfVKzmCA9f9y17d4STmNKdtVg=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/gGjHvKHGkf7YxLUxt4qTjZdkAtarmbFtcku3F7Dw-JvZfd_FAtMhms-0P12DSJnLSP9IXuxBEvICRY8a8WXx4Gphaqq0LBVlmKESfruK8GqLOTRRq-UCHNT-eVvCeDsG4wQJADp8aw=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/V-qQNdqc-qzJFvvvXoo3grTQ0aSGT-09Yr1Z8zp4XGkM6i5BOQm5E2D2qi8qhvQz-AohMyCw4lZMYFfyHsbF1cNmupXL1RYlzg2GejERDH1bBL6aVvHs77S7b4EwyOixrh1VESuOwg=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/1jlzj5RezFi8zUuhsHLjO9iRJc1NqTnB-ER6E2iji4BKKEzwB-JC9uSeoBd6FWVb2Tpijvp1tkiNiYNvVqVPzj4NT5kMkzOPuDNQTO080yDI9SEPi6jfop-XEMtaYZOtcvrILPD6fg=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/OK-_DHWfznYibBDVtPd7Ev8ZJq0yaus3B-MrdlNqF17QzN7l5VBoDsb4o3J7bAUmvoCZ0i78NwpkV-RY3Czu3Px8PZAQ0SKE4NJL5y7wriIcBuKZOyfqHTsTbFTp4GKbax7gZSKxeA=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/_8Im_iI8sErwkRuv-11o2-_FK7kumMr9DmlfMsBELMsvbWf3MBO91I4HR_dSDvSwt53ttekCJGXSSRk5iDmKVw3Z8m45hSA59UxBnYnFDaC3pirXrBHbZzEB1tefoqRV5gNd5NnivA=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/28Ke2TF3GGlET5K2qsspJvGpggTcqN2sZ1OOsVgHIrcP8wx3Yshn67N_kE5ywJ_1MJ6D1GwVSOdrH68l_QCt5d9EsF3f9JIOiu7XkSSx5K7G5W2dkAbww2KQwoNaEjNBWeGDr2sE6Q=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/AYXC0kflX4HTib6VfAzvSmYzR6i3bdvbTjAfpYvAb_IPo4Cq553ANpiWQtWwOVJHab313jGETKL5LHiBEZf1TcXOPyIhHlop-Ysu5EQZTglHDafDC0hD14sxCry2RiG5ep5MCzI0lQ=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/j_Jb0fPuz_ICUwRTuS_uJbB5B7CGEhauXDRcP25F3Zd8U4_Vna1NIpx7BdBeUfvsxj4zqyBqsRstF2XYxet1oXyuMWEtYkzTTwrrjLNuGcg1obez1rd8k4CDKz56VVmkwPJY7XP1uQ=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/RNQ5fvsoouA3EJ-nlZFViNt9m2ZIkL61UQ44GeS-Av7ydoNfZfM3cZkPUAgRVtUKi3Qv_Es2HXukW5HoJ6Go597XuiJYKIOTAL_X3GZ5VqpIFI9PjDkKsjjpM8dA_s3W1TIS3IjzTQ=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/5_UxpeFMteSd6H67jjbr1InEjo5MW4fHc3LcNF4LFPqZvgjFI2i34rXbhA_BRSr1QW32VvrUE6CjWgjDX8t15ZitgkTpEKihG_rjKM9rxVpd8WVKIWcpWiCLggbxypRbvH0GHQ-aoQ=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/qINFl1szHCnDarPcwKTo92wUUhXy2_rPAZM0RXqnGeM4Z22zydy4Zreg5kGeNnRiU4RUA0oa5iZ3XXsfFeBs6BbTAvLzZM4_nLj8XfO2tQ6d_Th1Hg_yxglIkCVKvYs7-jX5rPOK4g=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/OGpHpGE9ugxMzFSdlMjYJ3DKjP8y1bLz6rjW5l7pfiq5mZuLERQlXwbk5lk-SWwG3ybc6dAjwFWNvkprG5wg0tWdecfSeSzao6QdjCJhQO8kPZ6iEFbEudMwo3Z1rNl0M0o0PijINw=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/viXxvPInYGvBCeQ9sE72riWzxiBcWZe6HrzfNUcj6wEn_tLROrxNgo3DYoyRixTB3RZD9_h9hZhGHF6aDuvXGxNEjbpInPiEmfJ8VuHbtkT9hHriMv0J-BothwV0dB5clwZ4bbk2sg=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/oNKAlhhBRBrcy0ymDtPQQZZBKA9xSs1gS96Ol_7IYbNq_Cc_YwN3KBVqCQQZHWTv-zPWt757fIiJbJZ0PtfbKg8bjy5oOuCs_ERex0v5hB-pZRq_pCCui4U39WEBSbWMmVixEqLdZQ=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/AnKuER56b-NHFMoKzNB0r0vzXzXODlawDAgtWcCq3iOo2eW_ZfzBo7VOl2h_my5LpRB9lsXaTd1fg24NWvXP6CsfAFdLBiFfXih3S0W0cl76ahZ3uImmSnnllI3khBqSdKDqIP7U0Q=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/pwnKa12xMpf9jgMvoQ1OMgIzpXaWGNMDD3ZynUH9omGn043ztuSjcjsmmhdjwFCikg5fs7nj_WODGU25s3N1Qoj4gi3tJHxZqlmmr-ttbO3b6nw-r8y_Lmk6Fo0K-q73V0o6NqTLvg=w1920-h1080" src="" alt="" />
+  <img data-src="https://lh3.googleusercontent.com/7DmOstaS1yjl0lee4yQ1lXrCs2-UFug7FOVk6T_BJaKctGMeZWY-y6pJnSp76ZyB4qEyd1y3tzdWm-pjJGNUmpqtzpUGj48Viu4TavmHGlx7HdSkpqLFORZusNiiHY6vv4D7vtZb1A=w1920-h1080" src="" alt="" />
 </div>
 			<!--div class="gallery-list-wrapper w-dyn-list">
 				<div class="gallery-list w-clearfix w-dyn-items w-row">
